--- a/08-React-Estado-LifeCycle/homework/01 - Exercises/package.json
+++ b/08-React-Estado-LifeCycle/homework/01 - Exercises/package.json
@@ -2,8 +2,6 @@
    "name": "08-react-estado-lifecycle",
    "version": "1.0.0",
    "dependencies": {
-      "@babel/core": "^7.18.6",
-      "@babel/preset-env": "^7.18.6",
       "@testing-library/jest-dom": "^5.16.4",
       "@testing-library/react": "^11.2.7",
       "@testing-library/user-event": "^13.1.1",
@@ -50,7 +48,13 @@
       ]
    },
    "devDependencies": {
-      "standard": "^17.0.0"
+      "@babel/core": "^7.21.3",
+      "@babel/preset-env": "^7.20.2",
+      "@babel/preset-react": "^7.18.6",
+      "babel-loader": "^9.1.2",
+      "standard": "^17.0.0",
+      "webpack": "^5.76.2",
+      "webpack-cli": "^5.0.1"
    },
    "standard": {
       "env": [
